Fix CSP implementation, fix #247, fix #242

--- a/html/dev/search.html
+++ b/html/dev/search.html
@@ -8,8 +8,4 @@ Sort by
 	<option value="update">Last Update</option>
 </select>
 <ol>$list</ol>
-<script>
-	document.getElementById('sort').onchange = function() {
-		window.location.href = '?sort=' + this.value;
-	};
-</script>
+<script src="../search.js" async=""></script>
