--- a/html/learn/web/basic-elements/3.html
+++ b/html/learn/web/basic-elements/3.html
@@ -9,17 +9,17 @@ Comments - Basic Elements
 			<p>To move on, write a comment containing anything you want!</p>
 			<button id="check" class="blk">Submit</button>
 			<div id="passed" class="passed clearfix">
-				<h2>You did it! <small class="rit" style="font-size: 14px; top: 6px;"><a href="../4/">Move on →</a></small></h2>
+				<h2><span id="passtext"> </span> <small class="rit"><a href="../4/">Move on →</a></small></h2>
 			</div>
 			<div id="failed" class="failed clearfix">
 				<h2>Try Again</h2>
-				<p>Did you write the comment correctly? It looks like this: <code>&lt;!-- --></code></p>
+				<p id="fail"> </p>
 			</div>
 		</div>
 		<div id="cntrls"><a href="../2/" class="lft">Back</a> <a href="../4/" class="rit">Next</a></div>
 	</div>
 	<textarea id="html">&lt;!DOCTYPE html>
-&lt;html>
+&lt;html xmlns="http://www.w3.org/1999/xhtml">
 	&lt;head>
 		&lt;title>Comment example&lt;/title>
 	&lt;/head>
@@ -29,31 +29,12 @@ Comments - Basic Elements
 &lt;/html></textarea>
 	<iframe id="output"></iframe>
 </div>
-<textarea hidden="" id="canvas-js">$canvasjs</textarea>
-<script src="/dev/runcanvas.js"></script>
-	var footerOff = true,
-		noPageOverflow = 520,
-		htmlTA = document.getElementById('html'),
-		runtTimeout;
-	function run() {
-		document.getElementById('output').src = 'data:application/xhtml+xml; charset=utf-8,' + htmlTA.value;
+<textarea id="validator" hidden="">function validate() {
+	if (!document.documentElement.outerHTML.match(/&lt;!--.*-->/i)) {
+		return {
+			success: false,
+			msg: 'Did you write the comment correctly? It looks like this: `&lt;!-- -->`'
+		};
 	}
-	run();
-	function beforeRun() {
-		clearTimeout(runTimeout);
-		runTimeout = setTimeout(run, 100);
-	}
-	htmlTA.addEventListener('keyup', beforeRun);
-	htmlTA.addEventListener('keydown', beforeRun);
-	htmlTA.addEventListener('keypress', beforeRun);
-	document.getElementById('check').onclick = function() {
-		if (document.getElementById('html').value.match(/&lt;!--.*-->/i)) {
-			document.getElementById('passed').classList.add('show');
-			document.getElementById('failed').classList.remove('show');
-		} else {
-			document.getElementById('failed').classList.add('show');
-			document.getElementById('passed').classList.remove('show');
-		}
-		document.getElementById('text-inner').scrollTop = document.getElementById('text-inner').scrollHeight;
-	};
-</script>
+}</textarea>
+<script src="/learn/course.js" async=""></script>
