Fix a couple CSP bugs

--- a/html/qa/ask.html
+++ b/html/qa/ask.html
@@ -80,4 +80,5 @@
 	</fieldset>
 </form>
 <article id="preview" class="popup" hidden=""></article>
+<textarea id="langs" hidden="">$langs</textarea>
 <script src="ask.js" async=""></script>
