--- a/html/qa/question.html
+++ b/html/qa/question.html
@@ -91,4 +91,6 @@ $answers
 	<div id="answer-error" class="err"></div>
 	<button>Submit</button>
 </form>
+<input type="hidden" id="rep" value="$rep" />
+<textarea id="langs" hidden="">$langs</textarea>
 <script src="question.js" async=""></script>
