--- a/html/dev/canvas.html
+++ b/html/dev/canvas.html
@@ -1,8 +1,8 @@
 <section id="main">
 	<h1><span id="title">$title</span> <input type="text" id="edit-title" hidden="" value="$title" /> <a id="fullscreen-button" href="#fullscreen" hidden="">⤢</a> <a id="regular-layout" hidden="">⇲</a> <small><a id="save">Save</a></small></h1>
 	<div id="row" class="row">
-		<div id="ta-cont">
-			<textarea id="code" autocapitalize="none" autocomplete="off" spellcheck="false">$code</textarea>
+		<div id="ta-cont" class="ta-cont">
+			<textarea id="code" class="code" spellcheck="false" autocapitalize="off" autocorrect="off" placeholder="HTML">$code</textarea>
 			<code id="code-display"></code>
 		</div>
 		<iframe id="output" sandbox="allow-scripts"></iframe>
