--- a/html/dev/canvas.html
+++ b/html/dev/canvas.html
@@ -3,7 +3,7 @@
 	<div id="row" class="row">
 		<div id="ta-cont" class="ta-cont">
 			<textarea id="code" class="code" spellcheck="false" autocapitalize="off" autocorrect="off" placeholder="HTML">$code</textarea>
-			<code id="code-display"></code>
+			<code id="code-display" class="code-display"></code>
 		</div>
 		<iframe id="output" sandbox="allow-scripts"></iframe>
 	</div>
