Fix program textarea placeholders

--- a/html/dev/html.html
+++ b/html/dev/html.html
@@ -11,11 +11,11 @@
 				<code id="html-display" class="code-display"></code>
 			</div>
 			<div id="css-cont" class="ta-cont">
-				<textarea id="css" class="code" spellcheck="false" autocapitalize="off" autocorrect="off" placeholder="HTML">$css</textarea>
+				<textarea id="css" class="code" spellcheck="false" autocapitalize="off" autocorrect="off" placeholder="CSS">$css</textarea>
 				<code id="css-display" class="code-display"></code>
 			</div>
 			<div id="js-cont" class="ta-cont">
-				<textarea id="js" class="code" spellcheck="false" autocapitalize="off" autocorrect="off" placeholder="HTML">$js</textarea>
+				<textarea id="js" class="code" spellcheck="false" autocapitalize="off" autocorrect="off" placeholder="JS">$js</textarea>
 				<code id="js-display" class="code-display"></code>
 			</div>
 		</div>
