HTML → XHTML clarification (fix #255) (see #256)

--- a/html/dev/new.html
+++ b/html/dev/new.html
@@ -5,7 +5,7 @@
 		<img src="../canvas.png" />
 	</a>
 	<a href="html" class="half pad br">
-		<h2>HTML</h2>
+		<h2>XHTML</h2>
 		<img src="../html.png" />
 	</a>
 </div>
