--- a/html/dev/html.html
+++ b/html/dev/html.html
@@ -7,7 +7,7 @@
 		</div>
 		<div id="left" class="half">
 			<div id="html-cont" class="ta-cont">
-				<textarea id="html" class="code" spellcheck="false" autocapitalize="off" autocorrect="off" placeholder="HTML">$html</textarea>
+				<textarea id="html" class="code" spellcheck="false" autocapitalize="off" autocorrect="off" placeholder="XHTML">$html</textarea>
 				<code id="html-display" class="code-display"></code>
 			</div>
 			<div id="css-cont" class="ta-cont">
