Replace minHeight with flexbox layout

--- a/html/dev/canvas.html
+++ b/html/dev/canvas.html
@@ -1,6 +1,6 @@
 <section id="main">
 	<h1><span id="title">$title</span> <input type="text" id="edit-title" hidden="" value="$title" /> <small><a id="save">Save</a></small></h1>
-	<div id="row" class="row">
+	<div id="row">
 		<div id="ta-cont" class="ta-cont">
 			<textarea id="code" class="code" spellcheck="false" autocapitalize="off" autocorrect="off" placeholder="//code">$code</textarea>
 			<code id="code-display" class="code-display"></code>
