--- a/html/learn/lesson.html
+++ b/html/learn/lesson.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div id="row">
 	<div id="text">
 		<div id="text-inner">
 			<h1>$title</h1>
@@ -17,8 +17,10 @@
 		</div>
 		<div id="cntrls" class="justify"><a href="$back">Back</a> <a href="./">Course-Info</a> <a href="$next">Next</a></div>
 	</div>
-	<textarea id="html">$html</textarea>
-	<iframe id="output"></iframe>
+	<div id="ide">
+		<textarea id="html">$html</textarea>
+		<iframe id="output"></iframe>
+	</div>
 </div>
 <textarea id="validator" hidden="">$validate</textarea>
 <script src="/learn/course.js" async=""></script>
