--- a/html/learn/web/basic-elements/1.html
+++ b/html/learn/web/basic-elements/1.html
@@ -1,5 +1,5 @@
 Paragraphs - Basic Elements
-<div class="row">
+<div id="row">
 	<div id="text">
 		<div id="text-inner">
 			<h1>Basic Elements</h1>
@@ -19,7 +19,8 @@ Paragraphs - Basic Elements
 		</div>
 		<div id="cntrls"><a href="../../" class="lft">Back</a> <a href="../2/" class="rit">Next</a></div>
 	</div>
-	<textarea id="html">&lt;!DOCTYPE html>
+	<div id="ide">
+		<textarea id="html">&lt;!DOCTYPE html>
 &lt;html xmlns="http://www.w3.org/1999/xhtml">
 	&lt;head>
 		&lt;title>Paragraph excersize&lt;/title>
@@ -28,7 +29,8 @@ Paragraphs - Basic Elements
 &#9;&#9;
 	&lt;/body>
 &lt;/html></textarea>
-	<iframe id="output"></iframe>
+		<iframe id="output"></iframe>
+	</div>
 </div>
 <textarea id="validator" hidden="">function validate() {
 	if (!document.getElementsByTagName('p').length) {
