--- a/html/learn/web/basic-elements/2.html
+++ b/html/learn/web/basic-elements/2.html
@@ -1,5 +1,5 @@
 Headings - Basic Elements
-<div class="row">
+<div id="row">
 	<div id="text">
 		<div id="text-inner">
 			<h1>Basic Elements</h1>
@@ -17,14 +17,16 @@ Headings - Basic Elements
 		</div>
 		<div id="cntrls"><a href="../1/" class="lft">Back</a> <a href="../3/" class="rit">Next</a></div>
 	</div>
-	<textarea id="html">&lt;!DOCTYPE html>
+	<div id="ide">
+		<textarea id="html">&lt;!DOCTYPE html>
 &lt;html xmlns="http://www.w3.org/1999/xhtml">
 	&lt;head>&lt;/head>
 	&lt;body>
 &#9;&#9;
 	&lt;/body>
 &lt;/html></textarea>
-	<iframe id="output"></iframe>
+		<iframe id="output"></iframe>
+	</div>
 </div>
 <textarea id="validator" hidden="">function validate() {
 	if (
