--- a/html/learn/web/html-intro/5.html
+++ b/html/learn/web/html-intro/5.html
@@ -1,5 +1,5 @@
 Intro to HTML Recap
-<div class="row">
+<div id="row">
 	<div id="text">
 		<div id="text-inner">
 			<h1>Intro to HTML</h1>
@@ -23,7 +23,8 @@ Intro to HTML Recap
 		</div>
 		<div id="cntrls"><a href="../4/" class="lft">Back</a> <a href="../../basic-elements/" class="rit">Next ❯</a></div>
 	</div>
-	<textarea id="html">&lt;!DOCTYPE html>
+	<div id="ide">
+		<textarea id="html">&lt;!DOCTYPE html>
 &lt;html xmlns="http://www.w3.org/1999/xhtml">
 	&lt;head>
 		&lt;title>You did it!&lt;/title>
@@ -32,7 +33,8 @@ Intro to HTML Recap
 		&lt;p>Congrats! You did it!&lt;/p>
 	&lt;/body>
 &lt;/html></textarea>
-	<iframe id="output"></iframe>
+		<iframe id="output"></iframe>
+	</div>
 </div>
 <textarea id="validator" hidden="">function validate() {
 	return {
