--- a/html/learn/web/html-intro/3.html
+++ b/html/learn/web/html-intro/3.html
@@ -1,5 +1,5 @@
 Tags and Page Setup - Intro to HTML
-<div class="row">
+<div id="row">
 	<div id="text">
 		<div id="text-inner">
 			<h1>Intro to HTML</h1>
@@ -35,10 +35,12 @@ Tags and Page Setup - Intro to HTML
 		</div>
 		<div id="cntrls"><a href="../2/" class="lft">Back</a> <a href="../4/" class="rit">Next</a></div>
 	</div>
-	<textarea id="html">&lt;!DOCTYPE html>
+	<div id="ide">
+		<textarea id="html">&lt;!DOCTYPE html>
 &lt;html xmlns="http://www.w3.org/1999/xhtml">
 &lt;/html></textarea>
-	<iframe id="output"></iframe>
+		<iframe id="output"></iframe>
+	</div>
 </div>
 <textarea id="validator" hidden="">function validate(data) {
 	if (!data.match(/^\s*&lt;!DOCTYPE html>\s*&lt;html[^>]+?>\s*&lt;head>\s*&lt;\/head>\s*&lt;body>\s*&lt;\/body>\s*&lt;\/html>\s*$/i)) {
