Improve core server structure, misc improvements

--- a/html/a/head.html
+++ b/html/a/head.html
@@ -50,4 +50,4 @@
 				<a href="/mod/">Mod</a>
 				<form action="/search/"><input type="search" name="q" value="$search" placeholder="Search DevDoodle" results="" /></form>
 			</nav>
-			<div id="content">
+			<main id="content">
