--- a/html/login-recovery.html
+++ b/html/login-recovery.html
@@ -4,7 +4,7 @@
 	<div><input type="text" id="mail" placeholder="Recovery email" required="" /></div>
 	<div><button type="submit" id="submit1" disabled="">Submit</button> <button id="reset" type="reset">Clear form</button></div>
 </form>
-<p>You will have 5 minutes after recieving the email to enter the recovery code on this page.</p>
+<p>You will have 5 minutes after receiving the email to enter the recovery code on this page.</p>
 <form id="part2" method="POST" action="/api/login/recover" class="hide" hidden="">
 	<p>If you can not find the email, please check your spam folder and make sure your username and email are written correctly.</p>
 	<div><input type="text" id="code" name="code" placeholder="Recovery Code (16 chars)" /></div>
