--- a/html/a/foot.html
+++ b/html/a/foot.html
@@ -1,5 +1,5 @@
 
-			</div>
+			</main>
 			<footer id="footer" class="center-align">
 				<a href="//meta.devdoodle.net/">Meta</a> <line /> <a href="//devdoodle.net/faq/">FAQ</a> <line /> <a href="/about">About Us</a> <line /> <a href="/legal/tos">Terms of use</a> <line /> <a href="/legal/privacy">Privacy policy</a>
 				<br />
