Add question voting #7

--- a/html/qa/question.html
+++ b/html/qa/question.html
@@ -1,8 +1,8 @@
 <h1><span id="title">$lang: $title</span><input id="title-edit" value="$title" maxlength="144" hidden="" /></h1>
 <div id="question" class="hglt pad br">
 	<div class="ctrl pad lft">
-		<a title="This question is clear, answerable, and useful to the community."><svg class="blk up" xmlns="http://www.w3.org/2000/svg"><polygon points="10,1 1,19 19,19" /></svg></a>
-		<a title="This question needs improvement or is not useful."><svg class="blk dn" xmlns="http://www.w3.org/2000/svg"><polygon points="10,19 1,1 19,1" /></svg></a>
+		<a title="This question is clear, answerable, and useful to the community."><svg class="blk up" id="q-up" xmlns="http://www.w3.org/2000/svg"><polygon points="10,1 1,19 19,19" /></svg></a>
+		<a title="This question needs improvement or is not useful."><svg class="blk dn" id="q-dn" xmlns="http://www.w3.org/2000/svg"><polygon points="10,19 1,1 19,1" /></svg></a>
 		<a title="This question has an issue that needs to be addressed."><svg class="blk fl" xmlns="http://www.w3.org/2000/svg"><polygon points="1,1 19,1 19,11 5,11 5,23 1,23" /></svg></a>
 		<a id="med" class="ctrlicon editbtn" href="#edit" title="Edit">✎</a>
 		<a class="ctrlicon delbtn" title="Delete…">✕</a>
