--- a/html/user/userlist.html
+++ b/html/user/userlist.html
@@ -19,6 +19,6 @@
 	</select>
 </form>
 <h2>$num</h2>
-<div id="userlist" class="umar clearfix">
+<div id="userlist" class="umar flexcont">
 	$users</div>
 <script src="search.js" async=""></script>
