--- a/html/qa/question.html
+++ b/html/qa/question.html
@@ -83,8 +83,8 @@ $answers
 		</ul>
 		<p>Make sure you <em>don't:</em></p>
 		<ul>
-			<li><strong>Post only a link</strong>: external links might break, so a link-only answer could become useless in time. A link is ok as long as the relevant material is complained completly in the answer; you should quote or paraphrase relevant material from your source and add your own ideas and explanation.</li>
-			<li><strong>Only show your opinion</strong>: present the facts and let the reader make up their own opinion. Explain why you use your particular solution, but avoid snark or overly broad opinion statements.</li>
+			<li><strong>Post only a link</strong>: external links might break, so a link-only answer could become useless in time. A link is ok as long as the relevant material is contained completly within the answer; you should quote or paraphrase relevant material from your source and add your own ideas and explanation.</li>
+			<li><strong>Say only your opinion</strong>: present the facts and let the reader make up their own opinion. Explain why you use your particular solution, but avoid snark or overly broad opinion statements.</li>
 			<li><strong>Post a comment as an answer</strong>: answers should directly address the question – if you have the same problem or just want to express your thanks, vote up the question.</li>
 		</ul>
 	</div>
