--- a/html/qa/ask.html
+++ b/html/qa/ask.html
@@ -2,8 +2,8 @@
 <form id="form" method="post" action="/api/question/add">
 	<div>
 		<fieldset id="step0">
-			<h2><input type="text" name="title" placeholder="Title" id="title" autofocus="" class="fullwidth" maxlength="144" /></h2>
-			<h2><input type="text" name="lang" placeholder="Language" id="lang" /></h2>
+			<h2><input type="text" name="title" placeholder="Title" id="title" autofocus="" autocomplete="off" class="fullwidth" maxlength="144" /></h2>
+			<h2><input type="text" name="lang" placeholder="Language" id="lang" autocomplete="off" /></h2>
 			<div id="langsug" hidden="" class="abs"></div>
 			<button type="submit" id="submit1">Next</button>
 			<div id="err1" class="err"></div>
@@ -37,7 +37,7 @@
 			<textarea name="description" id="description" placeholder="Description"></textarea>
 			<pre></pre>
 		</div>
-		<h2><input type="text" name="question" id="question" placeholder="Core Question" class="fullwidth" maxlength="144" /></h2>
+		<h2><input type="text" name="question" id="question" placeholder="Core Question" class="fullwidth" maxlength="144" autocomplete="off" /></h2>
 		<button type="submit" id="submit3" hidden="">Next</button>
 		<div id="err3" class="err"></div>
 	</fieldset>
